processed/gerrit/txt/36418.txt
Change:     36418
Subject:    LU-12844 lnet: fix strncpy bound error
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/36418
Change-Id:  I2d5840fd58c7b7d27ef1b2aa12f1f187d30abbfd
Project:    fs/lustre-release
Branch:     b2_12
Status:     MERGED
Owner:      Jian Yu
Created:    2019-10-09 21:42:40.000000000
Updated:    2019-11-21 07:36:16.000000000
Patch Set:  3
Insertions: +1
Deletions:  -1
Comments:   3 (0 unresolved)
Topic:      LTS12

--- Labels ---
  Code-Review: Andreas Dilger: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Jian Yu, Amir Shehata

--- Commit Message ---
LU-12844 lnet: fix strncpy bound error

This patch fixes the following error while using gcc 8:

liblnetconfig.c: In function ‘lustre_lnet_parse_nids’:
liblnetconfig.c:320:3: error: ‘strncpy’ specified bound depends on
the length of the source argument [-Werror=stringop-overflow=]
   strncpy(entry, cur, len - 1);
   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
liblnetconfig.c:310:10: note: length computed here
    len = strlen(cur) + 1;
          ^~~~~~~~~~~
cc1: all warnings being treated as errors

This patch is back-ported from the following one:
Lustre-commit: cebda7a478f9943f10b9a3388377c61a54957a87
Lustre-change: https://review.whamcloud.com/36417

Change-Id: I2d5840fd58c7b7d27ef1b2aa12f1f187d30abbfd
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/36418
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2019-10-09 21:42:40.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-10-09 21:42:47.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2019-10-09 21:46:01.000000000) ---
Patch Set 1:

Builds for x86_64 centos7 successful
Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/3609/results.html

 Commencing initial testing: runtests@zfs runtests@zfs+DNE

--- Message (jenkins, 2019-10-09 22:14:55.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/9105/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/68905/ : SUCCESS

--- Message (Autotest, 2019-10-09 22:15:51.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-2 session for build 68905.

--- Message (Autotest, 2019-10-09 22:15:51.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-1 session for build 68905.

--- Message (Autotest, 2019-10-09 22:15:51.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-ldiskfs session for build 68905.

--- Message (Autotest, 2019-10-09 22:15:52.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-1 session for build 68905.

--- Message (Autotest, 2019-10-09 22:15:52.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-3 session for build 68905.

--- Message (Autotest, 2019-10-09 22:15:52.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-2 session for build 68905.

--- Message (Autotest, 2019-10-09 22:15:53.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-3 session for build 68905.

--- Message (Autotest, 2019-10-09 22:15:53.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-4 session for build 68905.

--- Message (Autotest, 2019-10-09 22:15:53.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-4 session for build 68905.

--- Message (Autotest, 2019-10-09 22:15:53.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-zfs session for build 68905.

--- Message (Andreas Dilger, 2019-10-09 22:22:58.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Jian Yu, 2019-10-09 22:33:28.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Autotest, 2019-10-10 21:14:05.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-zfs-part-4 session for build 68905. Requested by jianyu because of LU-12766.

--- Message (Autotest, 2019-10-11 04:58:14.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-zfs-part-4 session for build 68905. Requested by jianyu because of LU-12749.

--- Message (Jian Yu, 2019-10-16 08:16:38.000000000) ---
Patch Set 2: Commit message was updated.

--- Message (Jian Yu, 2019-10-16 08:17:31.000000000) ---
Patch Set 2:

(1 comment)

--- Message (wc-checkpatch, 2019-10-16 08:18:32.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2019-10-16 08:19:45.000000000) ---
Patch Set 2:

Builds for x86_64 centos7 successful
Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/3723/results.html

 Commencing initial testing: runtests@zfs runtests@zfs+DNE

--- Message (jenkins, 2019-10-16 08:48:48.000000000) ---
Patch Set 2:

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/9211/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/69012/ : SUCCESS

--- Message (Autotest, 2019-10-16 08:49:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-1 session for build 69012.

--- Message (Autotest, 2019-10-16 08:49:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-ldiskfs session for build 69012.

--- Message (Autotest, 2019-10-16 08:49:24.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-2 session for build 69012.

--- Message (Autotest, 2019-10-16 08:49:24.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-2 session for build 69012.

--- Message (Autotest, 2019-10-16 08:49:24.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-1 session for build 69012.

--- Message (Autotest, 2019-10-16 08:49:25.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-4 session for build 69012.

--- Message (Autotest, 2019-10-16 08:49:25.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-3 session for build 69012.

--- Message (Autotest, 2019-10-16 08:49:25.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-3 session for build 69012.

--- Message (Autotest, 2019-10-16 08:49:25.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-4 session for build 69012.

--- Message (Autotest, 2019-10-16 08:49:26.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-zfs session for build 69012.

--- Message (Minh Diep, 2019-10-22 14:05:16.000000000) ---
Topic set to LTS12

--- Message (Andreas Dilger, 2019-11-06 04:33:04.000000000) ---
Patch Set 2: Code-Review+2

--- Message (unknown, 2019-11-21 07:36:16.000000000) ---
Change has been successfully cherry-picked as 3dc4d86a6795ae8a6af46af2c9b17c621ec18dde by Oleg Drokin
